@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- WCS 2.0: Adjusted definition of rangeType.
+
 - Fixed OWS GetCapabilities to report only requests/operations that are enabled.
 
 - WCS 2.0: Report only bands in the range subset.
